# kaddressbook

./: .craft.ini  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  CMakeLists.txt  Messages.sh  REUSE.toml  addresseeeditorbase.h  config-kaddressbook.h.in  kaddressbook.categories  kaddressbook.renamecategories  snapcraft.yaml  utils.h
kontactplugin/: CMakeLists.txt  kaddressbook.setdlg  kaddressbook_plugin.cpp  kaddressbook_plugin.h  kaddressbookplugin.desktop  kaddressbookplugin.json  kaddressbookplugin.json.cmake
src/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  categoryfilterproxymodel.cpp  categoryfilterproxymodel.h  categoryselectwidget.cpp  categoryselectwidget.h  configuredialog.cpp  configuredialog.h  contactentitymimetypefiltermodel.cpp  contactentitymimetypefiltermodel.h  contactfields.cpp  contactinfoproxymodel.cpp  contactinfoproxymodel.h  contactlist.cpp  contactlist.h  contactselectiondialog.cpp  contactselectiondialog.h  contactselectionwidget.cpp  contactselectionwidget.h  contactsorter.cpp  contactsorter.h  contactswitcher.cpp  contactswitcher.h  globalcontactmodel.cpp  globalcontactmodel.h  kaddressbook-version.h.cmake  kaddressbook-version.h.in  kaddressbook.qrc  kaddressbook_options.h  kaddressbookmigrateapplication.cpp  kaddressbookmigrateapplication.h  kaddressbookpart.cpp  kaddressbookpart.h  kaddressbookui.rc  kaddressbookui_part.rc  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  (+9 more)
src/activities/: accountactivities.cpp  accountactivities.h  activitiesmanager.cpp  activitiesmanager.h  ldapactivities.cpp  ldapactivities.h
src/activities/autotests/: CMakeLists.txt  activitiesmanagertest.cpp  activitiesmanagertest.h
src/akonadi/: CMakeLists.txt  akonadicontactgrouprepository.cpp  akonadicontactgrouprepository.h  akonadicontactrepository.cpp  akonadicontactrepository.h
src/autotests/: CMakeLists.txt  contactfieldstest.cpp
src/configuration/: CMakeLists.txt  kaddressbook_config_activities.cpp  kaddressbook_config_activities.h  kaddressbook_config_activities.json  kaddressbook_config_ldap.cpp  kaddressbook_config_ldap.h  kaddressbook_config_ldap.json  kaddressbook_config_plugins.cpp  kaddressbook_config_plugins.desktop  kaddressbook_config_plugins.h  kaddressbook_config_plugins.json  kaddressbook_config_userfeedback.cpp  kaddressbook_config_userfeedback.desktop  kaddressbook_config_userfeedback.h  kaddressbook_config_userfeedback.json  kaddressbookconfigpluginlistwidget.cpp  kaddressbookconfigpluginlistwidget.h
src/data/: kaddressbook-importer.desktop  kaddressbook-view.desktop  kaddressbook_themes.knsrc  kaddressbookpart.desktop  org.kde.kaddressbook.appdata.xml  org.kde.kaddressbook.desktop
src/domain/: CMakeLists.txt  contact.cpp  contact.h  contactgroup.cpp  contactgroup.h  contactgrouprepository.cpp  contactgrouprepository.h  contactrepository.cpp  contactrepository.h
src/domain/autotests/: CMakeLists.txt  contactgrouptest.cpp  contactgrouptest.h  contacttest.cpp  contacttest.h
src/icons/: CMakeLists.txt
src/importexport/: CMakeLists.txt  KPimAddressbookImportExportConfig.cmake.in  Messages.sh  contactfields.cpp  contactfields.h  contactlist.cpp  contactlist.h  contactselectiondialog.cpp  contactselectiondialog.h  contactselectionwidget.cpp  contactselectionwidget.h  exportselectionwidget.cpp  exportselectionwidget.h  importexportengine.cpp  importexportengine.h  kaddressbookcontactselectiondialog.cpp  kaddressbookcontactselectiondialog.h  kaddressbookcontactselectionwidget.cpp  kaddressbookcontactselectionwidget.h  kaddressbookexportselectionwidget.cpp  kaddressbookexportselectionwidget.h  kaddressbookimportexportcontactfields.cpp  kaddressbookimportexportcontactfields.h  kaddressbookimportexportcontactlist.cpp  kaddressbookimportexportcontactlist.h  kaddressbookimportexportplugin.cpp  kaddressbookimportexportplugin.h  kaddressbookimportexportplugininterface.cpp  kaddressbookimportexportplugininterface.h  kaddressbookimportexportpluginmanager.cpp  kaddressbookimportexportpluginmanager.h  plugin.cpp  plugin.h  plugininterface.cpp  plugininterface.h  pluginmanager.cpp  pluginmanager.h
src/importexport/plugins/: CMakeLists.txt  Messages.sh
src/importexport/plugins/csv/: CMakeLists.txt  csvimportexportplugin.cpp  csvimportexportplugin.h  csvimportexportplugininterface.cpp  (+2 more)
src/listview/: CMakeLists.txt
src/listview/tests/: CMakeLists.txt  addressbooklistviewmodel.cpp  addressbooklistviewmodel.h  addressbookmainwidget.cpp  addressbookmainwidget.h  addressbookquickwidget.cpp  addressbookquickwidget.h  listview.qrc  main.cpp  mainwindow.cpp  mainwindow.h
src/plugininterface/: kaddressbookplugininterface.cpp  kaddressbookplugininterface.h
src/printing/: README  printingwizard.cpp  printingwizard.h  printprogress.cpp  printprogress.h  printstyle.cpp  printstyle.h  stylepage.cpp  stylepage.h
src/printing/compact/: compactstyle.cpp  compactstyle.h  compactstyle.ui
src/printing/detailed/: detailledstyle.cpp  detailledstyle.h
src/printing/detailled/: detailledstyle.cpp  detailledstyle.h
src/printing/grantlee/: README.themes  grantleeprintstyle.cpp  grantleeprintstyle.h
src/printing/mike/: mikesstyle.cpp  mikesstyle.h
src/printing/pictures/: CMakeLists.txt
src/printing/ringbinder/: ringbinderstyle.cpp  ringbinderstyle.h
src/settings/: kaddressbook.kcfg
src/tests/: CMakeLists.txt  main.cpp
src/userfeedback/: kaddressbookuserfeedbackprovider.cpp  kaddressbookuserfeedbackprovider.h  userfeedbackmanager.cpp  userfeedbackmanager.h
src/viewertemplates/: contact_embedded.html  theme.desktop
src/whatsnew/: whatsnewtranslations.cpp  whatsnewtranslations.h
src/widgets/: quicksearchwidget.cpp  quicksearchwidget.h
src/xxport/: xxportmanager.cpp  xxportmanager.h
src/xxport/csv/: csv_xxport.cpp  csv_xxport.h  csvimportdialog.cpp  csvimportdialog.h
src/xxport/gmx/: gmx_xxport.cpp  gmx_xxport.h
src/xxport/ldap/: ldap_xxport.cpp  ldap_xxport.h
src/xxport/ldif/: ldif_xxport.cpp  ldif_xxport.h
src/xxport/shared/: xxport.h
src/xxport/vcard/: vcard_xxport.cpp  vcard_xxport.h
(+145 files in other folders)
